# fe-o-godot-macros

./: .gitignore  Cargo.toml  readme.md
src/: godot_virtual_dispatch.rs  lib.rs  wrap_trait.rs
src/util/: mod.rs
